test errors fixed