@@ -12,16 +12,18 @@ public class Computations {
         Map<Player, List<Map<BuildingType, Integer>>> mapOfListsPerBuildingType = new HashMap<>();
         List<Map<BuildingType, Integer>> listPlayersBuildingsInCity = new LinkedList<>();
         for (Player playerToCheck : game.getPlayersList()) {
-            Map<BuildingType, Integer> buildingsInCity = new EnumMap<>(BuildingType.class);
+            Map<BuildingType, Integer> buildingsInCity = new HashMap<>();
             for (LinkedList<Building> row : playerToCheck.getCity()) {
                 for (Building building : row) {
-                    BuildingType type = building.getBuildingType();
-                    if (!buildingsInCity.containsKey(type)) {
-                        buildingsInCity.put(type, 1);
-                    } else {
-                        for (Map.Entry<BuildingType, Integer> entry : buildingsInCity.entrySet()) {
-                            if (entry.getKey().equals(type)) {
-                                entry.setValue(entry.getValue() + 1);
+                    if (building != null){
+                        BuildingType type = building.getBuildingType();
+                        if (!buildingsInCity.containsKey(type)) {
+                            buildingsInCity.put(type, 1);
+                        } else {
+                            for (Map.Entry<BuildingType, Integer> entry : buildingsInCity.entrySet()) {
+                                if (entry.getKey().equals(type)) {
+                                    entry.setValue(entry.getValue() + 1);
+                                }
                             }
                         }
                     }
@@ -34,9 +36,9 @@ public class Computations {
     }
 
     public void computeWhoHasMost(int round, Map<Player, List<Map<BuildingType, Integer>>> map, String typeOfScore) {
-        Map<BuildingType, Deque<Player>> playersWithMostOfType = new EnumMap<>(BuildingType.class);
-        Map<BuildingType, Integer> biggestValues = new EnumMap<>(BuildingType.class);// int
-        Deque<Player> deque = new LinkedList();
+        Map<BuildingType, List<Player>> playersWithMostOfType = new HashMap<>();
+        Map<BuildingType, Integer> biggestValues = new HashMap<>();// int
+        List<Player> deque = new LinkedList();
 
         for (Map.Entry<Player, List<Map<BuildingType, Integer>>> entry : map.entrySet()) { // voor elke speler in map of lists
             Player playerToCheck = entry.getKey(); //in speler
@@ -45,12 +47,14 @@ public class Computations {
                 for (Map.Entry<BuildingType, Integer> map2 : mapInListOfPlayer.entrySet()) {
                     if (playersWithMostOfType.containsKey(map2.getKey()) && biggestValues.containsKey(map2.getKey())) {
                         if (map2.getValue() > biggestValues.get(map2.getKey())) {
-                            biggestValues.replace(map2.getKey(), map2.getValue());
-                            deque.addFirst(playerToCheck);
-                            playersWithMostOfType.replace(map2.getKey(), deque);
+                            biggestValues.remove(map2.getKey());
+                            biggestValues.put(map2.getKey(), map2.getValue());
+                            deque.add(playerToCheck);
+                            playersWithMostOfType.remove(map2.getKey(), deque);
+                            playersWithMostOfType.put(map2.getKey(), deque);
                         }
                     } else {
-                        deque.addFirst(playerToCheck);
+                        deque.add(playerToCheck);
                         playersWithMostOfType.putIfAbsent(map2.getKey(), deque);
                         biggestValues.putIfAbsent(map2.getKey(), map2.getValue());
                     }
@@ -60,53 +64,68 @@ public class Computations {
         computeScores(round, playersWithMostOfType, typeOfScore);
     }
 
-    public void computeScores(int round, Map<BuildingType, Deque<Player>> mapPlayerWithMostOfType, String typeOfScore){
+    public void computeScores(int round, Map<BuildingType, List<Player>> mapPlayerWithMostOfType, String typeOfScore){
         Map<BuildingType, List<Integer>> pointsPerBuildingType = new ScoringTable().makeRounds(3);
 
-        for (Map.Entry<BuildingType, Deque<Player>> mapOfPlayerWithMost : mapPlayerWithMostOfType.entrySet()) {
-            BuildingType type = mapOfPlayerWithMost.getKey();
+        for (Map.Entry<BuildingType, List<Player>> mapOfPlayerWithMost : mapPlayerWithMostOfType.entrySet()) {
+            if (mapOfPlayerWithMost.getKey() != null){
+                BuildingType type = mapOfPlayerWithMost.getKey();
 
-            Player bestPlayer = mapOfPlayerWithMost.getValue().getFirst();
+                Player bestPlayer = null;
+                Player secondBestPlayer = null;
+                Player thirdBestPlayer = null;
 
-            mapOfPlayerWithMost.getValue().removeFirst();
-            Player secondBestPlayer = mapOfPlayerWithMost.getValue().getFirst();
+                if (mapOfPlayerWithMost.getValue().size() == 1){
+                    bestPlayer = mapOfPlayerWithMost.getValue().get(0);
+                } else if (mapOfPlayerWithMost.getValue().size() == 2){
+                    bestPlayer = mapOfPlayerWithMost.getValue().get(0);
+                    secondBestPlayer = mapOfPlayerWithMost.getValue().get(1);
+                } else if (mapOfPlayerWithMost.getValue().size() >= 3){
+                    bestPlayer = mapOfPlayerWithMost.getValue().get(0);
+                    secondBestPlayer = mapOfPlayerWithMost.getValue().get(1);
+                    thirdBestPlayer = mapOfPlayerWithMost.getValue().get(2);
+                }
 
-            mapOfPlayerWithMost.getValue().removeFirst();
-            Player thirdBestPlayer = mapOfPlayerWithMost.getValue().getFirst();
+                int bestScore = pointsPerBuildingType.get(type).get(0);
+                int secondScore = pointsPerBuildingType.get(type).get(1);
+                int thirdScore = pointsPerBuildingType.get(type).get(2);
 
-            int bestScore = pointsPerBuildingType.get(type).get(0);
-            int secondScore = pointsPerBuildingType.get(type).get(1);
-            int thirdScore = pointsPerBuildingType.get(type).get(2);
-
-            if (round > 2) {
-                bestPlayer.setVirtualScore(bestScore);
-                secondBestPlayer.setVirtualScore(secondScore);
-                thirdBestPlayer.setVirtualScore(thirdScore);
-            }
-
-            if (round == 2) {
-                bestPlayer.setVirtualScore(bestScore);
-                secondBestPlayer.setVirtualScore(secondScore);
-            }
-
-            if (round == 1){
-                bestPlayer.setVirtualScore(bestScore);
-            }
-
-            if (typeOfScore.equals("score")){
                 if (round > 2) {
-                    bestPlayer.setScore(bestScore);
-                    secondBestPlayer.setScore(secondScore);
-                    thirdBestPlayer.setScore(thirdScore);
+                    assert bestPlayer != null;
+                    bestPlayer.setVirtualScore(bestScore);
+                    assert secondBestPlayer != null;
+                    secondBestPlayer.setVirtualScore(secondScore);
+                    assert thirdBestPlayer != null;
+                    thirdBestPlayer.setVirtualScore(thirdScore);
                 }
 
                 if (round == 2) {
-                    bestPlayer.setScore(bestScore);
-                    secondBestPlayer.setScore(secondScore);
+                    assert bestPlayer != null;
+                    bestPlayer.setVirtualScore(bestScore);
+                    assert secondBestPlayer != null;
+                    secondBestPlayer.setVirtualScore(secondScore);
                 }
 
                 if (round == 1){
-                    bestPlayer.setScore(bestScore);
+                    assert bestPlayer != null;
+                    bestPlayer.setVirtualScore(bestScore);
+                }
+
+                if (typeOfScore.equals("score")){
+                    if (round > 2) {
+                        bestPlayer.setScore(bestScore);
+                        secondBestPlayer.setScore(secondScore);
+                        thirdBestPlayer.setScore(thirdScore);
+                    }
+
+                    if (round == 2) {
+                        bestPlayer.setScore(bestScore);
+                        secondBestPlayer.setScore(secondScore);
+                    }
+
+                    if (round == 1){
+                        bestPlayer.setScore(bestScore);
+                    }
                 }
             }
         }
